--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <!-- Row 3 -->
                 <div class="bg-white rounded-lg shadow p-6">
                     <div class="research-image-container">
-                        <img src="image/Fig5.jpg" alt="Project 5" class="h-100 w-full object-contain mb-4">
+                        <img src="image/Fig5.png" alt="Project 5" class="h-100 w-full object-contain mb-4">
                     </div>
                 </div>
                 <div class="bg-white rounded-lg shadow p-6">
