--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ziyun Lab</title>
+    <title>Birmingham Biomechanics Laboratory led by Ziyun Ding</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- Add any additional CSS or external stylesheets here -->
 </head>
@@ -43,7 +43,7 @@
             <div class="max-w-6xl mx-auto">
                 <h2 class="text-5xl font-bold mb-4 text-center">About Us</h2>
                 <p class="mt-4 text-gray-300 text-3xl leading-relaxed">
-                    Welcome to the Birmingham Biomechanics Laboratory, led by Dr. Ziyun Ding. Our mission is to leverage cutting-edge experimental and computational techniques to create patient-centered interventions and devices, aimed at enhancing the quality of life for individuals with neuromuscular disorders.
+                    Welcome to the Birmingham Biomechanics Laboratory, led by Dr. Ziyun Ding. Our mission is to leverage cutting-edge measurement and modelling techniques to create patient-centered interventions and devices, aimed at enhancing the quality of life for people with disabilities.
                 </p>
             </div>
         </div>
@@ -60,10 +60,8 @@
             text-align: center;
         }
         .research-image-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
+            display: block;
+            text-align: center;
         }
     </style>
     
@@ -76,11 +74,17 @@
                 <div class="bg-white rounded-lg shadow p-6">
                     <div class="research-image-container">
                         <img src="image/Fig1.png" alt="Project 1" class="h-100 w-full object-contain mb-4">
+                        <div class="research-description">
+                            <p class="text-2xl">We are working on advanced measurement techniques that use wearable sensors and smartphones to accurately track locomotion in real-world scenarios.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="bg-white rounded-lg shadow p-6">
                     <div class="research-image-container">
                         <img src="image/Fig2.png" alt="Project 2" class="h-100 w-full object-contain mb-4">
+                        <div class="research-description">
+                            <p class="text-2xl">Using patients' medical images measured in the field, we investigate skeletal muscle adaptation due to disabilities and its interactions with the production of locomotion.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -88,11 +92,17 @@
                 <div class="bg-white rounded-lg shadow p-6">
                     <div class="research-image-container">
                         <img src="image/Fig3.png" alt="Project 3" class="h-100 w-full object-contain mb-4">
+                        <div class="research-description">
+                            <p class="text-2xl">Our biomechanics model, using muscle-driven simulations, can predict the most effective interventions tailored to the patient’s unique needs in improving locomotion.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="bg-white rounded-lg shadow p-6">
                     <div class="research-image-container">
                         <img src="image/Fig4.png" alt="Project 4" class="h-100 w-full object-contain mb-4">
+                        <div class="research-description">
+                            <p class="text-2xl">We use various numerical optimisation algorithms to predict optimal muscle coordination for enhancing performance in specific locomotion tasks.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -100,16 +110,25 @@
                 <div class="bg-white rounded-lg shadow p-6">
                     <div class="research-image-container">
                         <img src="image/Fig5.png" alt="Project 5" class="h-100 w-full object-contain mb-4">
+                        <div class="research-description">
+                            <p class="text-2xl">Our study on biomechanical knee modelling won the Clinical Science Award, paving the way for improved clinical predictions of knee loading.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="bg-white rounded-lg shadow p-6">
                     <div class="research-image-container">
                         <img src="image/Fig6.png" alt="Project 6" class="h-100 w-full object-contain mb-4">
+                        <div class="research-description">
+                            <p class="text-2xl">Our clinical study facilitates the implementation of digital rehabilitative interventions by translating evidence-based positive research findings from our laboratory into clinical practice.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+
+
 
 
     <!-- Team Section -->
