--- a/index.html
+++ b/index.html
@@ -134,32 +134,32 @@
         <ul class="flex flex-wrap justify-center gap-6">
             <li class="bg-white rounded-lg shadow p-6 text-center">
                 <img src="image/ZD.png" alt="Team Member 1" class="h-40 w-40 object-cover rounded-full mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">Dr Ding</h3>
+                <h3 class="text-xl font-bold mb-2">Ziyun Ding</h3>
                 <p>Principal Investigator</p>
             </li>
             <li class="bg-white rounded-lg shadow p-6 text-center">
                 <img src="image/JH.png" alt="Team Member 2" class="h-40 w-40 object-cover rounded-full mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">Dr Hu</h3>
+                <h3 class="text-xl font-bold mb-2">Jiayu Hu</h3>
                 <p>Research Fellow</p>
             </li>
             <li class="bg-white rounded-lg shadow p-6 text-center">
                 <img src="image/WW.png" alt="Team Member 3" class="h-40 w-40 object-cover rounded-full mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">Mr Wang</h3>
+                <h3 class="text-xl font-bold mb-2">Weida Wang</h3>
                 <p>PhD Student</p>
             </li>
             <li class="bg-white rounded-lg shadow p-6 text-center">
                 <img src="image/KA.png" alt="Team Member 4" class="h-40 w-40 object-cover rounded-full mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">Mr Alsayed</h3>
+                <h3 class="text-xl font-bold mb-2">Khalid Alsayed</h3>
                 <p>PhD Student</p>
             </li>
             <li class="bg-white rounded-lg shadow p-6 text-center">
                 <img src="image/QB.png" alt="Team Member 5" class="h-40 w-40 object-cover rounded-full mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">Mr Bian</h3>
+                <h3 class="text-xl font-bold mb-2">Qingyao Bian</h3>
                 <p>PhD Student</p>
             </li>
             <li class="bg-white rounded-lg shadow p-6 text-center">
                 <img src="image/OP.png" alt="Team Member 6" class="h-40 w-40 object-cover rounded-full mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">Miss Ptaszyk</h3>
+                <h3 class="text-xl font-bold mb-2">Oliwia Ptaszyk</h3>
                 <p>PhD Student</p>
             </li>
             <!-- Add more team member details as needed -->
